--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,11 +20,11 @@ jobs:
     
       - name: Display Python version
         run:
-          mkdir -p ~/artifact
-          python -c "import sys; print(sys.version)" > ~/artifact/artifact-py-version-${{ matrix.python-version }}.txt
+          mkdir -p artifacts
+          python -c "import sys; print(sys.version)" > artifacts/artifact-py-version-${{ matrix.python-version }}.txt
       
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
           name: Artifact-V3
-          path: ~/artifact/*
+          path: artifacts/*
