--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,8 +20,8 @@ jobs:
     
       - name: Display Python version
         run:
-          mkdir -p artifacts
-          python -c "import sys; print(sys.version)" > artifacts/artifact-py-version-${{ matrix.python-version }}.txt
+          mkdir -p artifacts;
+          python -c "import sys; print(sys.version)" > artifacts/artifact-py-version-${{ matrix.python-version }}.txt;
       
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
